--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,58 +1,44 @@
 ---
-// Component Imports
-import Tour from '../components/Tour.astro';
-// You can import components from any supported Framework here!
+import { Markdown } from 'astro/components';
+
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
 import SvelteCounter from '../components/SvelteCounter.svelte';
 
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-let title = 'My Astro Site';
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
+let title = 'Olivier Cardinaux, ruechappe';
+let description = 'Le site de Olivier Cardinaux, créateur-concepteur de sites internet avec Kirby.';
+let permalink = 'https://ruechappe.fr/';
 ---
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>{title}</title>
-
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    
-    <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/home.css">
-
-    <style>
-        header {
-            display: flex;
-            flex-direction: column;
-            gap: 1em;
-            max-width: min(100%, 68ch);
-        }
-    </style>
+    <BaseHead title={title} description={description} permalink={permalink} />
 </head>
 <body>
-    <main>
-        <header>
-            <div>
-                <img width="60" height="80" src="/assets/logo.svg" alt="Astro logo">
-                <h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
-            </div>
-        </header>
-
-        <Tour />
-
-        <!--
-           - You can also use imported framework components directly in your markup!
-           -
-           - Note: by default, these components are NOT interactive on the client.
-           - The `:visible` directive tells Astro to make it interactive.
-           -
-           - See https://docs.astro.build/core-concepts/component-hydration/ 
-           -->
-        <SvelteCounter client:visible />
-    </main>
+  <header>
+    <Header />
+  </header>
+  <main>
+    <Markdown>
+    So much to say about myself and my work here!
+    </Markdown>
+    <a href="#">oops</a>
+  </main>
+  <footer>
+    <SvelteCounter client:visible />
+  </footer>
 </body>
 </html>
+
+<style lang="scss">
+div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+p {
+  text-transform: none;
+  max-width: min(100%, 68ch);
+}
+</style>
