chore: things falling in place, still early

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
 h1 {
   font-family: Quattrocento, serif;
   color: darkseagreen;
-  font-size: clamp(2rem, -0.4742rem + 6.1856vw, 2.75rem);
+  font-size: var(--font1);
   font-weight: 400;
 
   > :nth-child(3) {
