--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,44 +1,122 @@
 ---
 import { Markdown } from 'astro/components';
 
-import BaseHead from '../components/BaseHead.astro';
+import Html from "../layouts/default.astro";
 import Header from '../components/Header.astro';
-import SvelteCounter from '../components/SvelteCounter.svelte';
+import Panel from '../components/Panel.astro';
 
-let title = 'Olivier Cardinaux, ruechappe';
+let title = 'Olivier Cardinaux, rue Chappe, Paris';
 let description = 'Le site de Olivier Cardinaux, créateur-concepteur de sites internet avec Kirby.';
 let permalink = 'https://ruechappe.fr/';
 ---
+<Html title={ title } description = { description } permalink = { permalink } >
 
-<html lang="en">
-<head>
-    <BaseHead title={title} description={description} permalink={permalink} />
-</head>
 <body>
-  <header>
+  <header class="full">
     <Header />
   </header>
   <main>
-    <Markdown>
-    So much to say about myself and my work here!
-    </Markdown>
-    <a href="#">oops</a>
+    <Panel position="left" title="hero">
+    <div slot="content">
+      <Markdown>
+      ## Outils
+
+      Vous aider et vous donner la possibilité de prendre soin de votre site.
+
+      Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
+
+      Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
+      </Markdown>
+    </div>
+    </Panel>
+
+    <Panel position="right">
+      <div slot="content">
+        <Markdown>
+        Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+
+        Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+        </Markdown>
+      </div>
+    </Panel>
+
+    <Panel>
+      <div slot="content">
+        <Markdown>
+        ### Outils
+
+        Vous aider et vous donner la possibilité de prendre soin de votre site.
+
+        Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
+
+        Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
+        </Markdown>
+      </div>
+    </Panel>
+
+    <Panel position="right">
+      <div slot="content">
+        <Markdown>
+        Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+
+        Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+        </Markdown>
+      </div>
+    </Panel>
   </main>
   <footer>
-    <SvelteCounter client:visible />
+    <a href="#">oops</a>
   </footer>
 </body>
-</html>
+
+</Html>
 
 <style lang="scss">
-div {
-  display: flex;
-  flex-direction: column;
+// This layout allows for full-bleed
+
+body {
+  display: grid;
+  grid-template-columns:
+    1fr
+    10fr
+    1fr;
+  grid-template-rows:
+    // 8.33vw is 1/12 de 100vw, bcz of 12 cols grid
+    8.33vw
+    minmax(calc(100vh - 16.66vw), 1fr)
+    8.33vw;
+
+  & > :global(*) {
+    grid-column: 2;
+  }
+
+  & > :global(.full) {
+    grid-column: 1 / -1;
+  }
+
+  background-color: var(--color-fancy-bg);
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
   gap: 1rem;
 }
 
-p {
-  text-transform: none;
-  max-width: min(100%, 68ch);
+/* stylelint-disable-next-line no-descending-specificity */
+:global(.center) {
+  grid-column: 1 / -1;
+}
+
+:global(.left) {
+  grid-column: 1 / 8;
+}
+
+:global(.right) {
+  grid-column: -8 / -1;
+}
+
+:global(#hero) {
+  margin-top: 5rem;
 }
 </style>
