--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import { Markdown } from 'astro/components';
 
 import Html from "../layouts/default.astro";
 import Header from '../components/Header.astro';
+import PanelTitle from '../components/PanelTitle.astro';
 import Panel from '../components/Panel.astro';
+import PanelFull from '../components/PanelFull.astro';
 
 let title = 'Olivier Cardinaux, rue Chappe, Paris';
 let description = 'Le site de Olivier Cardinaux, créateur-concepteur de sites internet avec Kirby.';
@@ -15,11 +17,25 @@ let permalink = 'https://ruechappe.fr/';
   <header class="full">
     <Header />
   </header>
-  <main>
-    <Panel position="left" title="hero">
+  <PanelTitle>
+    <div class="title-item"><h1>Olivier&nbsp;Cardinaux</h1></div>
+    <div class="title-item">Faiseur de sites internet personnalisés</div>
+  </PanelTitle>
+
+  <Panel position="right" title="intro">
     <div slot="content">
       <Markdown>
-      ## Outils
+      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+
+      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+      </Markdown>
+    </div>
+  </Panel>
+
+  <Panel>
+    <div slot="content">
+      <Markdown>
+      ### Outils
 
       Vous aider et vous donner la possibilité de prendre soin de votre site.
 
@@ -28,42 +44,36 @@ let permalink = 'https://ruechappe.fr/';
       Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
       </Markdown>
     </div>
-    </Panel>
+  </Panel>
 
-    <Panel position="right">
-      <div slot="content">
-        <Markdown>
-        Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+  <PanelFull>
+    <div slot="content">
+      <Markdown>
+      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+      </Markdown>
+    </div>
+    <div slot="content">
+      <Markdown>
+      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+      </Markdown>
+    </div>
+    <div slot="content">
+      <Markdown>
+      Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
+      </Markdown>
+    </div>
+  </PanelFull>
 
-        Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
-        </Markdown>
-      </div>
-    </Panel>
+  <Panel position="center columns">
+    <div slot="content">
+      <Markdown>
+      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
 
-    <Panel>
-      <div slot="content">
-        <Markdown>
-        ### Outils
+      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+      </Markdown>
+    </div>
+  </Panel>
 
-        Vous aider et vous donner la possibilité de prendre soin de votre site.
-
-        Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
-
-        Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
-        </Markdown>
-      </div>
-    </Panel>
-
-    <Panel position="right">
-      <div slot="content">
-        <Markdown>
-        Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
-
-        Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
-        </Markdown>
-      </div>
-    </Panel>
-  </main>
   <footer>
     <a href="#">oops</a>
   </footer>
@@ -76,18 +86,12 @@ let permalink = 'https://ruechappe.fr/';
 
 body {
   display: grid;
-  grid-template-columns:
-    1fr
-    10fr
-    1fr;
-  grid-template-rows:
-    // 8.33vw is 1/12 de 100vw, bcz of 12 cols grid
-    8.33vw
-    minmax(calc(100vh - 16.66vw), 1fr)
-    8.33vw;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(var(--vw12), maxcontent);
+  gap: 1rem;
 
   & > :global(*) {
-    grid-column: 2;
+    grid-column: 2 / -2;
   }
 
   & > :global(.full) {
@@ -97,26 +101,27 @@ body {
   background-color: var(--color-fancy-bg);
 }
 
-main {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  gap: 1rem;
-}
-
 /* stylelint-disable-next-line no-descending-specificity */
 :global(.center) {
-  grid-column: 1 / -1;
+  grid-column: 2 / -2;
 }
 
 :global(.left) {
-  grid-column: 1 / 8;
+  grid-column: 2 / 8;
 }
 
 :global(.right) {
-  grid-column: -8 / -1;
+  grid-column: -8 / -2;
 }
 
-:global(#hero) {
-  margin-top: 5rem;
+:global(#title) {
+  grid-column: 2 / 7;
+  grid-row: 2;
+  // margin-top: 5rem;
+  transform: translateY(calc((var(--vw12) / 2) + 1rem));
+}
+
+:global(#intro) {
+  grid-row: 3;
 }
 </style>
