--- a/src/components/Panel.astro
+++ b/src/components/Panel.astro
@@ -47,11 +47,12 @@ article {
     width: 100px;
     height: 150px;
     float: left;
-    shape-outside: polygon(0px 0px, 0px 7.60vh, 11vw 6vw, 100% 0%)
+    shape-outside: polygon(0 0, 0 7.6vh, 11vw 6vw, 100% 0%);
   }
 
   .content {
     position: relative;
+
     // padding-top: var(--vw12);
   }
 }
