--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ let permalink = 'https://ruechappe.fr/';
   </header>
   <PanelTitle>
     <div class="title-item"><h1>Olivier&nbsp;Cardinaux</h1></div>
-    <div class="title-item">Faiseur de sites internet personnalisés</div>
+    <div class="title-item">Fabricant de sites internet personnalisés</div>
   </PanelTitle>
 
   <Panel position="right" title="intro">
