refactor: scss tree

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,23 +4,17 @@ import WorldIcon from "./svg/world.svg.astro"
 ---
 <div class="logo">
   <HomeIcon />
-  <h2>ruechappe.fr</h2>
+  ruechappe.fr
   <WorldIcon />
 </div>
 
 <style lang="scss">
 .logo {
   display: flex;
-}
-
-h2 {
   font-family: "Quattrocento Sans", serif;
   font-style: italic;
+  font-size: 32px;
   color: burlywood;
-
-  // Adjust to get even with logo icons, although
-  // TODO: I'm probably going to put those in a before
-  // pseudo.
   line-height: 1.1;
 }
 </style>
