--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,44 +1,1 @@
-@use "o6/variables";
-
-:root {
-  font-family:
-    "Quattrocento Sans",
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Helvetica,
-    Arial,
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji";
-  font-size: 1.125rem;
-
-  --user-font-scale: 1rem - 16px;
-
-  font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.3125rem);
-
-  --font-mono:
-    "IBM Plex Mono",
-    consolas,
-    "Andale Mono WT",
-    "Andale Mono",
-    "Lucida Console",
-    "Lucida Sans Typewriter",
-    "DejaVu Sans Mono",
-    "Bitstream Vera Sans Mono",
-    "Liberation Mono",
-    "Nimbus Mono L",
-    monaco,
-    "Courier New",
-    courier,
-    monospace;
-}
-
-h2 {
-  font-weight: 500;
-  font-size: clamp(1.5rem, 1rem + 1.25vw, 2rem);
-}
-
-h1 {
-  font-size: clamp(2rem, -0.4742rem + 6.1856vw, 2.75rem);
-}
+@use "o6"; // this works with _index.scss file, new
