--- a/src/components/DefaultHead.astro
+++ b/src/components/DefaultHead.astro
@@ -26,11 +26,12 @@ const { title, description, permalink } = Astro.props;
 <meta property="twitter:image" content="https://astro.build/social.jpg?v=1" />
 
 <!-- Fonts -->
-<link rel="preconnect" href="https://fonts.gstatic.com" />
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@400;700&display=swap">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento:wght@400;700&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento:wght@400;700&display=swap"> -->
 
-<link rel="stylesheet" href="/style/global.scss">
+<link rel="stylesheet" href="/assets/style/modern_reset.css">
+<link rel="stylesheet" href="/assets/fonts/moriston.css">
 <link rel="stylesheet" href={Astro.resolve('../styles/main.scss')}>
 
 <script type="module" src={Astro.resolve('../js/index.js')} defer></script>
