--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,7 @@ let permalink = 'https://ruechappe.fr/';
 
   <Panel position="right" title="intro">
     <div slot="content">
-      <Markdown>
-      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
-
-      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
-      </Markdown>
+      <p class="teasing">Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.</p>
     </div>
   </Panel>
 
