--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,32 @@
 ---
 import HomeIcon from "./svg/home.svg.astro"
 import WorldIcon from "./svg/world.svg.astro"
+import ThemeToggle from "./ThemeToggle.svelte"
 ---
-<div class="logo">
-  <HomeIcon />
-  ruechappe.fr
-  <WorldIcon />
+<div class="header-inner">
+  <div class="header-left logo">
+    <HomeIcon />
+    ruechappe.fr
+    <WorldIcon />
+  </div>
+
+  <div class="header-right">
+    <ThemeToggle client:load />
+  </div>
 </div>
 
 <style lang="scss">
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
 .logo {
   display: flex;
-  font-family: "Quattrocento Sans", serif;
-  font-style: italic;
   font-size: 32px;
-  color: burlywood;
+  font-weight: 900;
+  color: var(--color-accent);
   line-height: 1.1;
 }
 </style>
