refactor: styling changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ let permalink = 'https://ruechappe.fr/';
     <Header />
   </header>
   <PanelTitle>
-    <div class="title-item"><h1>Olivier&nbsp;Cardinaux</h1></div>
-    <div class="title-item">Fabricant de sites internet personnalisés</div>
+    <div class="title-item"><h1>Olivier&nbsp;CARDINAUX</h1></div>
+    <div class="title-item">Fabricant de sites internet personnalisés à Paris</div>
   </PanelTitle>
 
   <Panel position="right" title="intro">
