--- a/src/styles/o6/_colors.scss
+++ b/src/styles/o6/_colors.scss
@@ -1,14 +1,29 @@
-:root {
-  --my-color: orange;
+@mixin dark-colors {
+  --color-text: #f3f4f6;
+  --color-text-bg: #1f2937;
+  --color-fancy-bg: rgba(254 252 113 / 50%);
+}
+
+@mixin light-colors {
   --color-text: #1f2937;
   --color-text-bg: #f3f4f6;
   --color-fancy-bg: rgb(254 252 113);
 }
 
 body {
+  @include light-colors;
+
+  --color-accent: orange;
+
+  &.dark-theme {
+    @include dark-colors;
+  }
+
   @media (prefers-color-scheme: dark) {
-    --color-text: #f3f4f6;
-    --color-text-bg: #1f2937;
-    --color-fancy-bg: rgba(254 252 113 / 50%);
+    @include dark-colors;
+
+    &.light-theme {
+      @include light-colors;
+    }
   }
 }
