--- a/src/styles/o6/_config.scss
+++ b/src/styles/o6/_config.scss
@@ -2,3 +2,6 @@
   --box-radius: 2px;
   --vw12: 8.333vw; // 8.33vw is 1/12 de 100vw, bcz of 12 cols grid
 }
+
+// TODO: Use a clamp function like this to adjust gaps etc.
+// font-size: clamp(0.875rem, 0.4626rem + 1.0309vw + var(--user-font-scale), 1.3125rem);
