--- a/src/components/PanelTitle.astro
+++ b/src/components/PanelTitle.astro
@@ -1,35 +1,44 @@
-<div id="title" class="content left">
+---
+const { position = "left", title = null } = Astro.props;
+const setClass = position;
+---
+
+<div id="title" class={setClass}>
   <slot />
 </div>
 
 <style lang="scss">
-#title {
-  display: block;
-  flex-direction: row;
-  border: 1px solid var(--color-text);
-  border-radius: var(--box-radius);
-  z-index: 10;
-  padding: 1rem;
+  #title {
+    justify-self: start;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid var(--color-text);
+    border-radius: var(--box-radius);
+    z-index: 10;
+    padding: 1rem;
 
-  &::after {
-    content: "";
-    position: absolute;
-    z-index: -10;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: var(--color-fancy-bg);
-  }
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: -10;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: var(--color-fancy-bg);
+    }
 
-  :global(.title-item) {
-    // background-color: var(--color-fancy-bg);
-    text-align: center;
-    line-height: 1.2;
-
-    &:last-of-type {
+    :global(.title-item) {
+      // background-color: var(--color-fancy-bg);
+      display: block;
+      text-align: center;
+      line-height: 1.2;
+      width: 100%;
       color: var(--color-accent);
+
+      &:first-of-type {
+        color: var(--color-text);
+      }
     }
   }
-}
 </style>
