--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,17 +1,44 @@
 ---
-import Head from './../components/DefaultHead.astro';
-
 const { title, description, permalink, current } = Astro.props
 ---
 <!doctype html>
 <html lang="fr" class="no-js">
   <head>
-    <Head
-      title={ title } 
-      description={ description } 
-      permalink={ permalink } />
+    <!-- Global Metadata -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Primary Meta Tags -->
+    <title>{title}</title>
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={permalink} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content="https://astro.build/social.jpg?v=1" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content={permalink} />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+    <meta property="twitter:image" content="https://astro.build/social.jpg?v=1" />
+
+    <!-- Fonts -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento:wght@400;700&display=swap"> -->
+
+    <link rel="stylesheet" href="/assets/style/modern_reset.css">
+    <link rel="stylesheet" href="/assets/fonts/moriston.css">
+    <link rel="stylesheet" href={Astro.resolve('../styles/main.scss')}>
+
+    <script type="module" src={Astro.resolve('../js/index.js')} defer></script>
   </head>
   <!-- Here comes a body -->
   <slot />
 </html>
-
