--- a/src/styles/o6/_index.scss
+++ b/src/styles/o6/_index.scss
@@ -1,3 +1,9 @@
+// See https://github.com/twbs/rfs
+
+@use "../../../node_modules/rfs/scss" as * with (
+  $rfs-base-value: 0.875rem,
+  $rfs-factor: 10
+);
 @use "config";
 @use "colors";
 @use "typo";
