chore: testing changes

--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -17,10 +17,10 @@ import ThemeToggle from "./ThemeToggle.svelte";
     <nav id="sitenav">
       <ul role="list">
         <li>
-          <a href="/about">À propos</a>
+          <a href="/about">Mes porjetc</a>
         </li>
         <li>
-          <a href="/about">Mon sexe</a>
+          <a href="/about">À propos</a>
         </li>
       </ul>
     </nav>
