--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,14 @@ let permalink = 'https://ruechappe.fr/';
   </PanelPageTitle>
   <Panel position="stretch">
     <div slot="content">
-      <p class="teasing">Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.</p>
+      <Markdown>
+      Pour définir nos modèles de site, nous avons d’abord mis en place une matrice reposant sur 4 dimensions. Chacune d’elles regroupe les besoins clés identifiés tout au long de nos quinze années d’expériences et de dialogues avec nos clients. À quelles attentes répondent chaque dimension ? Qu’est-ce que cela implique ? Nous vous détaillons ces 4 dimensions :
+
+      * Dimension Référence : dans cette perspective, un site répond au besoin d’avoir avant tout un outil de présentation et d’accès à l’information, destiné à des publics qui demandent à mieux vous connaître, auxquels vous devez avant tout une information fiable et à jour. Cela combine tout ce qui fait le cœur d’un site corporate (histoire, chiffres clés, marque employeur, etc.) ou de service public aujourd’hui
+      * Dimension Business : cet axe correspond au besoin de soutenir en premier lieu l’activité, notamment par l'acquisition et le référencement naturel, en prenant soin des parcours clients, des logiques de conversion. Plusieurs questions se posent : quels contenus pour faire venir ? Quel call to action ? Quelle est la promesse ?
+      * Dimension Service : cette focale s’intéresse aux projets proposant un service, que ce soit du simple compte utilisateur ou encore une véritable capacité relationnelle ou de traitement. Dans ce cas, la fluidité des parcours est essentielle.
+      * Dimension Vision : ce dernier point prend en compte le besoin de partager un éclairage, une vision, une cause, de faire comprendre votre engagement tant pour l’environnement que pour la société et votre activité. Mais comment traduire cette dimension sans tomber dans une simple rubrique RSE en silo ?
+      </Markdown>
     </div>
   </Panel>
 
