--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ let permalink = 'https://ruechappe.fr/';
     <Header />
   </header>
   <PanelTitle>
-    <div class="title-item"><h1>Olivier&nbsp;CARDINAUX</h1></div>
-    <div class="title-item">Fabricant de sites internet personnalisés à Paris</div>
+    <div class="title-item"><h1>Olivier&nbsp;Cardinaux</h1></div>
+    <div class="title-item"><h4>Fabricant de sites internet personnalisés à Montmartre</h4></div>
   </PanelTitle>
 
   <Panel position="right" title="intro">
@@ -43,10 +43,10 @@ let permalink = 'https://ruechappe.fr/';
     </div>
   </Panel>
 
-  <PanelFull>
+  <PanelFull title="points">
     <div slot="content">
       <Markdown>
-      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+      Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
       </Markdown>
     </div>
     <div slot="content">
