--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -1,13 +1,23 @@
 ---
-
+import HomeIcon from "./svg/home.svg.astro";
+import WorldIcon from "./svg/world.svg.astro";
 ---
 <div class="footer-inner">
   <div class="footer-left">
-    <a href="#">oops, I did it again…</a>
+    <div class="offline">
+    <HomeIcon />
+    <p>4 rue Chappe, 75018 Paris</p>
+    <p>06 89 63 80 14</p>
+    </div>
+    <div class="online">
+    <WorldIcon />
+    <p>olivier@ruechappe.fr</p>
+    </div>
+
   </div>
 
-  <div class="footer-right">
-    <p>Look again</p>
+  <div class="footer-right logo">
+    <p>ruechappe.fr</p>
   </div>
 </div>
 
@@ -15,7 +25,33 @@
 .footer-inner {
   display: flex;
   justify-content: space-between;
+  align-items: end;
   padding: 1rem;
+  border-top: 1px solid var(--color-text);
+}
+
+.online,
+.offline {
+  display: grid;
+  grid-template-columns: max-content max-content;
+
+  svg {
+    height: 32px;
+    width: 32px;
+  }
+
+  :first-child {
+    // this is the icon, spans two rows
+    // the next one or two els are in second row
+    grid-row: 1 / 3;
+    padding-right: 0.5rem;
+  }
+}
+
+.logo {
+  font-size: 18px;
+  font-weight: 900;
+  color: var(--color-accent);
 }
 </style>
 
