--- a/src/components/PanelFull.astro
+++ b/src/components/PanelFull.astro
@@ -33,4 +33,17 @@ const { position = "left", title = null } = Astro.props
     padding-top: var(--vw12);
   }
 }
+
+#points {
+  padding-bottom: calc(var(--vw12) * 1.5);
+
+  div > :nth-child(2) {
+    transform: translateY(var(--vw12));
+  }
+
+  div > :nth-child(3) {
+    transform: translateY(calc(var(--vw12) * 1.5));
+  }
+}
+
 </style>
