--- a/src/styles/o6/_colors.scss
+++ b/src/styles/o6/_colors.scss
@@ -1,13 +1,20 @@
-@mixin dark-colors {
-  --color-text: #f3f4f6;
-  --color-text-bg: #1f2937;
-  --color-fancy-bg: rgba(254 252 113 / 50%);
+body {
+  --color-text-black: #1f2937;
+  --color-text-white: #f3f4f6;
+  --color-bg-black: #1f2937;
+  --color-bg-white: #f3f4f6;
 }
 
 @mixin light-colors {
-  --color-text: #1f2937;
-  --color-text-bg: #f3f4f6;
+  --color-text: var(--color-text-black);
+  --color-text-bg: var(--color-bg-white);
   --color-fancy-bg: rgb(254 252 113);
+}
+
+@mixin dark-colors {
+  --color-text: var(--color-text-white);
+  --color-text-bg: var(--color-bg-black);
+  --color-fancy-bg: rgba(254 252 113 / 50%);
 }
 
 body {
