--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ let permalink = 'https://ruechappe.fr/';
 ---
 <Html title={ title } description = { description } permalink = { permalink } >
 
-<body>
+<body id="fuck" class="loading fuck">
   <header class="full">
     <Header />
   </header>
