--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -25,7 +25,7 @@ const { title, description, permalink, current } = Astro.props
       let theme = localStorage.getItem('theme');
 
       if (theme == 'dark' || (!theme) && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        root.setAttribute("data-theme", theme);
+        root.setAttribute("data-theme", "dark");
       } else {
         root.removeAttribute("data-theme");
       }
