--- a/public/assets/style/modern_reset.css
+++ b/public/assets/style/modern_reset.css
@@ -22,8 +22,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -35,7 +35,9 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
+
   /* text-rendering: optimizeSpeed; */
+
   /* line-height: 1.5; */
 }
 
