--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -1,7 +1,8 @@
 ---
+import Button from "./Button.astro";
 import HomeIcon from "./svg/home.svg.astro";
-import WorldIcon from "./svg/world.svg.astro";
 import ThemeToggle from "./ThemeToggle.svelte";
+import WorldIcon from "./svg/world.svg.astro";
 ---
 
 <div class="header-inner">
@@ -14,13 +15,14 @@ import ThemeToggle from "./ThemeToggle.svelte";
   </div>
 
   <div class="header-right">
+    <Button theme="nav">Button nav</Button>
     <nav id="sitenav">
       <ul role="list">
         <li>
-          <a href="/about">Mes porjetc</a>
+          <a href="/apropos">Mes porjetc</a>
         </li>
         <li>
-          <a href="/about">À propos</a>
+          <a href="/apropos">À propos</a>
         </li>
       </ul>
     </nav>
@@ -33,6 +35,10 @@ import ThemeToggle from "./ThemeToggle.svelte";
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+
+    :global(svg) {
+      transform: translateY(5px);
+    }
   }
 
   .header-left,
@@ -46,11 +52,9 @@ import ThemeToggle from "./ThemeToggle.svelte";
 
   .logo {
     font-size: 32px;
-    font-weight: 900;
 
     > a {
-      letter-spacing: 0.1em;
-      opacity: 0.66;
+      color: inherit;
     }
   }
 
