--- a/src/components/PanelFull.astro
+++ b/src/components/PanelFull.astro
@@ -15,7 +15,7 @@ const { position = "left", title = null } = Astro.props
   margin: 0 calc(var(--vw12) / 3);
 
   & > :global(*) {
-    margin: calc(var(--vw12) / 3);
+    margin: 0 calc(var(--vw12) / 3);
     padding: 1em;
     border: 1px solid var(--color-text);
     border-radius: var(--box-radius);
