feat: add Google's ThemeToggle!

--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -1,7 +1,7 @@
 ---
 import Button from "./Button.astro";
 import HomeIcon from "./svg/home.svg.astro";
-import ThemeToggle from "./ThemeToggle.svelte";
+import ThemeToggle from "./ThemeToggle.astro";
 import WorldIcon from "./svg/world.svg.astro";
 ---
 
