--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,100 +1,106 @@
 ---
-import { Markdown } from 'astro/components';
+import { Markdown } from "astro/components";
 
-import Button from '../components/Button.astro';
-import Footer from '../components/DefaultFooter.astro';
+import Button from "../components/Button.astro";
+import Footer from "../components/DefaultFooter.astro";
 import Html from "../layouts/default.astro";
-import Header from '../components/DefaultHeader.astro';
-import Panel from '../components/Panel.astro';
-import PanelFull from '../components/PanelFull.astro';
-import PanelTitle from '../components/PanelTitle.astro';
+import Header from "../components/DefaultHeader.astro";
+import Panel from "../components/Panel.astro";
+import PanelFull from "../components/PanelFull.astro";
+import PanelTitle from "../components/PanelTitle.astro";
 
-let title = 'Olivier Cardinaux, rue Chappe, Paris';
-let description = 'Le site de Olivier Cardinaux, créateur-concepteur de sites internet avec Kirby.';
-let permalink = 'https://ruechappe.fr/';
+let title = "Olivier Cardinaux, rue Chappe, Paris";
+let description =
+  "Le site de Olivier Cardinaux, créateur-concepteur de sites internet avec Kirby.";
+let permalink = "https://ruechappe.fr/";
 ---
-<Html title={ title } description = { description } permalink = { permalink } >
 
-<body id="fuck" class="loading fuck">
-  <header class="full">
-    <Header />
-  </header>
-  <PanelTitle>
-    <div class="title-item"><h1>olivier&nbsp;cardinaux</h1></div>
-    <div class="title-item"><h4>Fabricant de sites internet personnalisés à Montmartre</h4></div>
-  </PanelTitle>
+<Html title={title} description={description} permalink={permalink}>
+  <body id="fuck" class="loading fuck">
+    <header class="full">
+      <Header />
+    </header>
+    <PanelTitle>
+      <div class="title-item"><h1>olivier&nbsp;cardinaux</h1></div>
+      <div class="title-item">
+        <h4>Fabricant de sites internet personnalisés à Montmartre</h4>
+      </div>
+    </PanelTitle>
 
-  <Panel position="right" title="intro">
-    <div slot="content">
-      <p class="teasing">Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.</p>
-    </div>
-  </Panel>
+    <Panel position="right" title="intro">
+      <div slot="content">
+        <p class="teasing">
+          Les projets <span id="num" data-splitting>(numériques)</span> prennent
+          tout leur sens lorsque leurs concepteurs comprennent comment ils seront
+          construits, et pourquoi. Tout comme un architecte comprend comment une
+          structure est créée, il devrait en être de même pour le web.
+        </p>
+      </div>
+    </Panel>
 
-  <Panel>
-    <div slot="content">
-      <Markdown>
-      ### Outils
+    <Panel>
+      <div slot="content">
+        <Markdown>
+          ### Outils
 
-      Vous aider et vous donner la possibilité de prendre soin de votre site.
+          Vous aider et vous donner la possibilité de prendre soin de votre site.
 
-      Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
+          Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
 
-      Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
+          Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
 
-      <Button theme="panel">Oh oui je veux</Button>
-      <Button>Button naked</Button>
+          <Button theme="panel">Oh ouiii, je le veux ! &rarr;</Button>
+          <Button>Button naked</Button>
+        </Markdown>
+      </div>
+    </Panel>
 
-      </Markdown>
-    </div>
-  </Panel>
+    <PanelFull title="points">
+      <div slot="content">
+        <Markdown>
+          Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+        </Markdown>
+      </div>
+      <div slot="content">
+        <Markdown>
+          Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+        </Markdown>
+      </div>
+      <div slot="content">
+        <Markdown>
+          Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
+        </Markdown>
+      </div>
+    </PanelFull>
 
-  <PanelFull title="points">
-    <div slot="content">
-      <Markdown>
-      Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
-      </Markdown>
-    </div>
-    <div slot="content">
-      <Markdown>
-      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
-      </Markdown>
-    </div>
-    <div slot="content">
-      <Markdown>
-      Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
-      </Markdown>
-    </div>
-  </PanelFull>
+    <Panel position="center columns">
+      <div slot="content">
+        <Markdown>
+          Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
 
-  <Panel position="center columns">
-    <div slot="content">
-      <Markdown>
-      Les projets <span id="num" data-splitting>(numériques)</span> prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+          Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+        </Markdown>
+      </div>
+    </Panel>
 
-      Tout aussi important, j'insiste pour donner de l'importance à l'autre versant : comprendre non seulement pourquoi, mais pour qui le projet est conçu. Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
-      </Markdown>
-    </div>
-  </Panel>
-
-  <footer class="full">
-    <Footer />
-  </footer>
-</body>
-
+    <footer class="full">
+      <Footer />
+    </footer>
+  </body>
 </Html>
 
 <style lang="scss">
-body {
-  background-color: var(--color-fancy-bg);
+  body {
+    background-color: var(--color-fancy-bg);
 
-  :global(#title) {
-    grid-column: 2 / 6;
-    grid-row: 2;
-    transform: translateY(calc((var(--vw12) / 2) + 1rem));
-  }
+    :global(#title) {
+      grid-column: 2 / 6;
+      grid-row: 2;
+      transform: translateY(calc((var(--vw12) / 2) + 1rem));
+    }
 
-  :global(#intro) {
-    grid-row: 3;
+    :global(#intro) {
+      grid-row: 3;
+    }
   }
-}
 </style>
