refactor: start introducing open-props

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,14 +8,14 @@ let { type = 'button', theme } = Astro.props;
 <style lang="scss">
 button {
   --button-radius: 10px;
-  --button-text-color: var(--color-text);
+  --button-text-color: var(--text-1);
   font-size: var(--scale-2);
   font-weight: 400;
   display: inline-flex;
   position: relative;
   margin: 0;
   padding: 0 1rem;
-  border: 1px solid var(--color-text);
+  border: 1px solid var(--text-1);
   border-radius: var(--button-radius);
   color: var(--button-text-color);
   font-family: var(--font-body-1-font-family);
