--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -27,7 +27,7 @@ import WorldIcon from "./svg/world.svg.astro";
   justify-content: space-between;
   align-items: end;
   padding: 1rem;
-  border-top: 1px solid var(--color-text);
+  border-top: 1px solid var(--text-1);
 }
 
 .online,
