--- a/src/components/PanelFull.astro
+++ b/src/components/PanelFull.astro
@@ -17,10 +17,10 @@ const { position = "left", title = null } = Astro.props
   & > :global(*) {
     margin: 0 calc(var(--vw12) / 3);
     padding: 1em;
-    border: 1px solid var(--color-text);
-    border-radius: var(--box-radius);
-    background-color: var(--color-text-bg);
-    color: var(--color-text);
+    border: 1px solid var(--text-1);
+    border-radius: var(radius-2);
+    background-color: var(--text-1-bg);
+    color: var(--text-1);
   }
 }
 
