--- a/src/components/PanelPageTitle.astro
+++ b/src/components/PanelPageTitle.astro
@@ -13,8 +13,8 @@ const setClass = position
   align-self: center;
   display: flex;
   flex-direction: column;
-  border: 2px solid var(--color-text);
-  border-radius: var(--box-radius);
+  border: 2px solid var(--text-1);
+  border-radius: var(--radius-2);
   z-index: 10;
   padding: 1rem;
 
@@ -38,7 +38,7 @@ const setClass = position
     color: var(--color-accent);
 
     &:first-of-type {
-      color: var(--color-text);
+      color: var(--text-1);
     }
   }
 }
