--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -34,7 +34,7 @@
   }
 
   .theme-toggle {
-    background: white;
+    background: inherit;
     border-radius: var(--radius-round);
     aspect-ratio: var(--ratio-box);
     margin: var(--size-1);
