--- a/src/components/PanelTitle.astro
+++ b/src/components/PanelTitle.astro
@@ -10,14 +10,14 @@ const setClass = position;
 <style lang="scss">
   #title {
     // Colors for outlined text below in h1
-    --color-shadow: var(--color-text);
+    --color-shadow: var(--text-1);
     --color-bg-outline: var(--color-fancy-bg);
 
     justify-self: start;
     display: flex;
     flex-direction: column;
-    // border: 2px solid var(--color-text);
-    border-radius: var(--box-radius);
+    // border: 2px solid var(--text-1);
+    border-radius: var(--radius-2);
     background-color: var(--color-bg-outline);
     z-index: -10;
     padding: 1rem;
@@ -39,7 +39,7 @@ const setClass = position;
       text-align: left;
       line-height: 1.2;
       width: 100%;
-      color: var(--color-text);
+      color: var(--text-1);
 
       > h1 {
         color: var(--color-bg-outline); // rgb(0 0 0 / 0.05);
