--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,6 +1,53 @@
 ---
 const { title, description, permalink, current } = Astro.props
 ---
+
+<style>
+@import "open-props/style";
+@import "open-props/normalize";
+@import "../styles/utilities.css";
+@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400;700;900&display=swap");
+
+body {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(var(--vw12), maxcontent);
+  gap: var(--size-fluid-3);
+
+  & > * {
+    grid-column: 2 / -2;
+  }
+
+  & > .full {
+    grid-column: 1 / -1;
+  }
+
+  > .center {
+    grid-column: 2 / -2;
+    justify-self: center;
+    color: red;
+  }
+
+  > .stretch {
+    grid-column: 2 / -2;
+    justify-self: stretch;
+  }
+
+  > .left {
+    grid-column: 2 / 8;
+  }
+
+  > .right {
+    grid-column: -8 / -2;
+  }
+
+  > footer {
+    align-self: end;
+  }
+}
+
+</style>
+
 <!doctype html>
 <html lang="fr" class="no-js">
   <head>
@@ -9,10 +56,7 @@ const { title, description, permalink, current } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/assets/style/modern_reset.css">
-    <!-- <link rel="stylesheet" href="/assets/fonts/moriston.css"> -->
-    <link rel="stylesheet" href={Astro.resolve('../styles/main.scss')}>
+    <link rel="stylesheet" href={Astro.resolve('../styles/utilities.css')}>
 
     <!-- Preload fonts -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
